--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/fonts/overpass.css">
   <link rel="stylesheet" href="./assets/fonts/syne.css">
+  <link rel="stylesheet" href="./assets/fonts/poppins.css">
 </head>
 <body>
   <app-root></app-root>
